--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 40px 0 33px;
   max-width: 690px;
-  max-height: 208px;
+  min-height: 208px;
   color: #fff;
   font-family: "InterRegular";
   font-size: 16px;
