--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,9 @@
   grid-column: 2/3;
   grid-row-start: 2;
   justify-self: start;
-  max-width: 690px;
+  max-width: 703px;
+  width: 100%;
   max-height: 429px;
+  display: grid;
+  justify-items: start;
 }
